<resources>
    <string name="app_name">LoginKeyboard</string>

    <!--    login-->
    <string name="login_top_text">账号登录</string>
    <string name="login_input_phone">请输入11位手机号码</string>
    <string name="login_input_code">请输入验证码</string>
    <string name="login_get_code">获取验证码</string>
    <string name="login_user_agree">同意《用户使用协议》</string>
    <string name="login_button_confirm">确定</string>
</resources>
